--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="subscribe">SUBSCRIBE</a>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
         </div>
     </header>
 
@@ -41,44 +41,60 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Greetings Food Enthusiasts and Explorers!</h2>
-            <p class="title-text">
-                welcome to Sta. Maria, Bulacan! We're thrilled to have you join us on this exciting journey through the
-                flavors, aromas, and stories that make our town a gastronomic haven.
-                <br><br>
-                Sta. Maria, Bulacan, is a town in the Philippines known for its rich cultural heritage and vibrant
-                culinary scene. Nestled in the heart of Central Luzon, Sta. Maria boasts a diverse array of dishes that
-                reflect the fusion of traditional Filipino flavors with unique local influences. Let's delve deeper into
-                the culinary delights that make Sta. Maria a must-visit destination for food enthusiasts and explorers.
-                <br><br>
-
-                <img src="images/stamaria.jpg" alt="" class="fitBg">
             <h2 class="titleText">Meet the Team</h2>
-            <strong>John Carlo Roxas:</strong> The culinary enthusiast who believes in the magic of every flavor
-            combination.
             <br>
-            <b>Vince Calderon:</b> The food critic with a discerning palate and a passion for sharing
-            delightful dining experiences.
-            <br>
-            <b>John Gabriel Guilalas:</b> Our resident explorer, always on the lookout for hidden gems
-            and local favorites.
-            <br>
-            <b>Glaiza San Victores:</b> The storyteller, capturing the essence of each restaurant and
-            its specialties through words and images.
+            <h2 class="titleText">The Culinary Adventurers Behind Patikim ni Sta. Maria
+
+            </h2>
+            <p class="title-text">
+                Welcome to "Patikim ni Sta.Maria," your ultimate guide to the diverse and delicious culinary scene in
+                Sta. Maria, Bulacan. Our blog is dedicated to exploring and showcasing the rich flavors, mouth-watering
+                dishes, and the vibrant restaurant culture in our beloved town.Allow us to introduce the minds and
+                taste buds behind the scenes:
+                <br><br>
+            <h2 class="titleText">John Carlo Roxas - Chief Explorer</h2>
+            Meet John Carlo, the mastermind and Chief Explorer of Patikim ni Sta. Maria. With an insatiable appetite
+            for culinary discoveries, John Carlo is the driving force behind our blog. His love for the town's rich
+            cultural heritage and its diverse food offerings is what fuels the essence of Patikim ni Sta. Maria.
             <br><br>
-            Join us on this gastronomic journey as we uncover the best culinary delights that Sta. Maria, Bulacan,
-            has to offer. Whether you're a foodie, a local resident, or a visitor, we invite you to explore the
-            flavors and stories that make our town a food lover's paradise.
-            <img src="images/stamaria.jpg" alt="" class="fitBg">
+            <h2 class="titleText">Vince Calderon - Wordsmith Extraordinaire</h2>
 
-            </p>
-            <a href="index.html" class="btn2">Back</a>
+            Vince Calderon, our Wordsmith Extraordinaire, turns each dining experience into a vivid narrative. Through
+            his eloquent words, he captures the essence of the flavors, aromas, and stories that make Sta. Maria's
+            culinary scene truly exceptional. Vince's linguistic prowess brings the Patikim ni Sta. Maria blog to life.
+            <br><br>
+            <h2 class="titleText">John Gabriel Guilalas - Visual Culinary Artist</h2>
 
-        </div>
-        <div class="imgBx">
+            As our Visual Culinary Artist, John Gabriel transforms the flavors of Sta. Maria into captivating visuals.
+            With an artistic eye and a passion for photography, he skillfully captures the essence of each dish, making
+            your virtual culinary journey a feast for the eyes. John Gabriel's images tell a story of taste and
+            aesthetics.
+            <br><br>
+            <h2 class="titleText">Glaiza San Victores - Community Connector</h2>
+
+            Glaiza, our Community Connector, bridges the gap between Patikim ni Sta. Maria and our vibrant community.
+            Through her dedication, she ensures that our blog not only showcases the town's culinary treasures but also
+            fosters a sense of community pride. Glaiza brings people together through a shared love for food and
+            culture.
+
+            <img src="images/team.jpg" alt="" class="fitBg">
+            <br><br>
+            Together, we form the creative force behind Patikim ni Sta. Maria, driven by a shared love for our town and
+            a mission to celebrate its culinary excellence. Each blog post is a collaborative effort, blending our
+            unique perspectives and talents to present you with an authentic and immersive culinary experience.
+            <br><br>
+            As we embark on this flavorful journey, we invite you to join us in exploring the tastes, traditions, and
+            stories that make Sta. Maria a culinary haven. Thank you for being a part of our community, and we look
+            forward to sharing many more delicious adventures with you on Patikim ni Sta. Maria!
 
 
-        </div>
+            <br><br>
+
+            <div class="share">
+                <p>&copy; 2023 Patikim ni Sta.Maria. All rights reserved.</p>
+            </div>
+
+
 
 
 
@@ -120,6 +136,8 @@
 
             </div>
         </div>
+
+
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
