--- a/caypombo.html
+++ b/caypombo.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="nav container">
-            <a href="#" class="logo">Patikim ni Sta.Maria</a>
+            <a href="index.html" class="logo">Patikim ni Sta.Maria</a>
             <div class="nav-links">
                 <a href="index.html" class="home">Home</a>
                 <a href="about.html" class="about">About</a>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="subscribe">SUBSCRIBE</a>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
         </div>
     </header>
 
