--- a/resto1.html
+++ b/resto1.html
@@ -9,6 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
+
 <body>
     <header>
         <div class="nav container">
@@ -28,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="subscribe">SUBSCRIBE</a>
+            <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
         </div>
     </header>
 
@@ -47,56 +48,81 @@
                 <br><br>
                 <img src="images/Caypombo 2.jpg" alt="">
             <h2 class="titleText">Savor the Specialties at Sangyup Garden!</h2>
-            Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
-            offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore our
-            specialties:
-            <br><br>
-            <b>Unlimited Pork Delight (PHP 249.00):</b>
-            <br><br>
-            Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
-            Dive into an endless array of side dishes that perfectly complement the succulent pork.
-            Satisfy your cravings with unlimited servings of steamed rice.
-            <br><br>
-            <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
-            <br><br>
-            Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
-            Accompany your feast with an assortment of unlimited side dishes.
-            Fill your plate with unlimited servings of perfectly steamed rice.
-            <br><br>
-            <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
-            <br><br>
-            Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering sixteen
-            flavors.
-            Elevate your dining experience with a serving of luscious steamed egg.
-            Delight in a symphony of flavors with unlimited side dishes and rice.
-            <br><br>
-            <b>Irresistible Add-Ons:</b>
-            <br><br>
-            <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted cheese
-            to
-            enhance your barbecue experience.
-            <br><br>
-            <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea, the
-            perfect
-            accompaniment to your flavorful meal.
-            <br><br>
-            <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect addition
-            to your
-            feast.
-            <br><br>
-            <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful Melona
-            Ice
-            Cream.
-            <br><br>
-            At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight your
-            senses. Join us for an unforgettable journey of flavors and culinary wonders!
-            <br><br>
+            <p>
+                Indulge in a symphony of flavors with our specially crafted unlimited packages at Sangyup Garden. Each
+                offering is a culinary masterpiece designed to elevate your dining experience to new heights. Explore
+                our
+                specialties:
+                <br><br>
+                <b>Unlimited Pork Delight (PHP 249.00):</b>
+                <br><br>
+                Immerse yourself in a pork lover's paradise with unlimited pork in three tantalizing flavors.
+                Dive into an endless array of side dishes that perfectly complement the succulent pork.
+                Satisfy your cravings with unlimited servings of steamed rice.
+                <br><br>
+                <b>Pork & Chicken Extravaganza (PHP 299.00):</b>
+                <br><br>
+                Experience a duet of flavors with unlimited pork and chicken, available in eight delectable varieties.
+                Accompany your feast with an assortment of unlimited side dishes.
+                Fill your plate with unlimited servings of perfectly steamed rice.
+                <br><br>
+                <b> Ultimate Trio - Pork, Chicken & Beef Fiesta (PHP 349.00):</b>
+                <br><br>
+                Embark on the ultimate feast with unlimited pork, chicken, and beef, each available in a staggering
+                sixteen
+                flavors.
+                Elevate your dining experience with a serving of luscious steamed egg.
+                Delight in a symphony of flavors with unlimited side dishes and rice.
+                <br><br>
+                <b>Irresistible Add-Ons:</b>
+                <br><br>
+                <b> Unlimited Cheese Sauce (Php 50 per head)</b> / Ala carte: Dive into the gooey goodness of melted
+                cheese
+                to
+                enhance your barbecue experience.
+                <br><br>
+                <b>Unlimited Iced Tea (Php 20 per head)</b> / Ala carte: Quench your thirst with refreshing iced tea,
+                the
+                perfect
+                accompaniment to your flavorful meal.
+                <br><br>
+                <b>Steamed Egg (Php 100):</b> Delight in the creamy goodness of our special steamed egg, a perfect
+                addition
+                to your
+                feast.
+                <br><br>
+                <b>Melona Ice Cream (Php 40):</b> Conclude your dining adventure on a sweet note with our delightful
+                Melona
+                Ice
+                Cream.
+                <br><br>
+                At Sangyup Garden, we invite you to explore the diverse and delectable specialties crafted to delight
+                your
+                senses. Join us for an unforgettable journey of flavors and culinary wonders!
+                <br><br>
             <h2 class="titleText">The Place</h2>
-            The ambiance at Sangyup Garden is as delightful as the cuisine. Outdoor seating surrounded by beautiful
-            gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
-            or casual gatherings with friends.
+            <p>
+                The ambiance at Sangyup Garden is as delightful as the cuisine. Outdoor seating surrounded by beautiful
+                gardens and soothing water features creates a perfect setting for romantic dinners, celebratory feasts,
+                or casual gatherings with friends.
+                <br><br>
+                <img src="images/caypombo1 ambiance.jpg" alt="">
+                <br><br>
+            <h2 class="titleText">Visit us at:</h2>
+            <p>
+                3rd Floor, RM Guevarra Building, Cay Pombo, Santa Maria, Bulacan (Across from JessNor)
+            </p>
+            <br>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.7034285282445!2d120.9794954312563!3d14.849036822499643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ad2c6deb4de5%3A0xfdea5e88fb34687d!2sSamgyup%20Garden!5e0!3m2!1sfil!2sph!4v1702697213455!5m2!1sfil!2sph"
+                width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
             <br><br>
-            <img src="images/caypombo1 ambiance.jpg" alt="">
+            <h2 class="titleText">Operating Hours</h2>
+            <p>Monday – Sunday
+                4:00 PM - 11:00 PM (Orders cut off at 10:00 PM)</p>
+            <br>
             Discover the culinary wonders of Sangyup Garden, where delicious food and a charming atmosphere come
             together to create an unforgettable dining experience.
             </p>
@@ -107,7 +133,27 @@
 
 
 
+
     </section>
+    <section>
+        <div class="share">
+            <p>Share this blog</p>
+            <ul class="share-icon">
+                <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
+                <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
+                <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
+                <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+                <li><a href="#"><i class='bx bxl-reddit'></i></i></a></li>
+                <li><a href="#"><i class='bx bxl-pinterest'></i></a></li>
+            </ul>
+        </div>
+        <p>&copy; 2023 Patikim ni Sta.Maria. All rights reserved.</p>
+
+
+    </section>
+
+
+
 
     <footer>
         <div class="footer-container">
@@ -117,11 +163,6 @@
                     in Sta. Maria, Bulacan. Our blog is dedicated to exploring and showcasing the rich flavors,
                     mouth-watering dishes, and the vibrant restaurant culture in our beloved town. <a
                         href="about.html">See more...</a></p>
-                <ul class="sci">
-                    <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
-                    <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
-                    <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
-                </ul>
             </div>
             <div class="sec quicklinks">
                 <h2>Quick Links</h2>
@@ -132,17 +173,13 @@
                 </ul>
             </div>
             <div class="sec contactBx">
-                <h2>Contact Info</h2>
-                <ul class="info">
-                    <li>
-                        <span><i class='bx bxs-map'></i></span>
-                        <span>6444 London street <br> Brighton PA 33445 <br> Uk</span>
-                    </li>
-                    <li>
-                        <span><i class='bx bx-envelope'></i></span>
-                        <p><a href="mailto:patikimnistamaria@gmail.com">patikimnistamaria@gmail.com</a></p>
-                    </li>
-
+                <h2>Get in Touch</h2>
+                <ul class="sci">
+                    <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
+                    <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
+                    <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
+                    <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+                    <li><a href="mailto:patikimnistamaria@gmail.com"><i class="bx bx-envelope"></i></a></li>
                 </ul>
                 <div class="subscribe-form">
                     <label for="email">Subscribe for more yummy tummy</label>
