--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@
         <div class="nav container">
             <a href="#" class="logo">Patikim ni Sta.Maria</a>
             <div class="nav-links">
-                <a href="index.html" class="home">Home</a>
-                <a href="about.html" class="about">About</a>
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
 
                 <!-- Restaurants Dropdown -->
                 <div class="dropdown">
-                    <a href="restaurants.html" class="dropbtn">Restaurant&#11206;</a>
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
                     <div class="dropdown-content">
                         <a href="caypombo.html">Caypombo</a>
                         <a href="#staclara">Sta Clara</a>
@@ -89,6 +89,9 @@
 
 
             <br><br>
+
+            <a href="index.html" class="btn2">Back</a>
+
 
             <div class="share">
                 <p>&copy; 2023 Patikim ni Sta.Maria. All rights reserved.</p>
