--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="images/SantaMariaWelcomeArch.jpg" type="image/png">
+
 </head>
 
 <body>
@@ -16,12 +18,12 @@
         <div class="nav container">
             <a href="index.html" class="logo">Patikim ni Sta.Maria</a>
             <div class="nav-links">
-                <a href="index.html" class="home">Home</a>
-                <a href="about.html" class="about">About</a>
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
 
                 <!-- Restaurants Dropdown -->
                 <div class="dropdown">
-                    <a href="restaurants.html" class="dropbtn">Restaurant&#11206;</a>
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
                     <div class="dropdown-content">
                         <a href="caypombo.html">Caypombo</a>
                         <a href="#staclara">Sta Clara</a>
