--- a/about.html
+++ b/about.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-
     <header>
-        <div class="nav container">
-            <a href="#" class="logo">Patikim ni Sta.Maria</a>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
             <div class="nav-links">
                 <a href="index.html" class="logo">Home</a>
                 <a href="about.html" class="logo">About</a>
@@ -41,7 +40,6 @@
 
     <section class="about container" id="about">
         <div class="contentBx">
-            <h2 class="titleText">Meet the Team</h2>
             <br>
             <h2 class="titleText">The Culinary Adventurers Behind Patikim ni Sta. Maria
 
@@ -49,28 +47,34 @@
             <p class="title-text">
                 Welcome to "Patikim ni Sta.Maria," your ultimate guide to the diverse and delicious culinary scene in
                 Sta. Maria, Bulacan. Our blog is dedicated to exploring and showcasing the rich flavors, mouth-watering
-                dishes, and the vibrant restaurant culture in our beloved town.Allow us to introduce the minds and
-                taste buds behind the scenes:
-                <br><br>
-            <h2 class="titleText">John Carlo Roxas - Chief Explorer</h2>
+                dishes, and the vibrant restaurant culture in our beloved town.
+            <p>
+            <h2 class="titleText">The Logo</h2>
+            <img src="images/logooo.png" alt="" class="fitBg">
+
+            <h2 class="titleText">Meet the Team</h2>
+            <p>Allow us to introduce the minds and
+                taste buds behind the scenes:</p>
+
+            <h2 class="title-text">John Carlo Roxas - Chief Explorer</h2>
             Meet John Carlo, the mastermind and Chief Explorer of Patikim ni Sta. Maria. With an insatiable appetite
             for culinary discoveries, John Carlo is the driving force behind our blog. His love for the town's rich
             cultural heritage and its diverse food offerings is what fuels the essence of Patikim ni Sta. Maria.
             <br><br>
-            <h2 class="titleText">Vince Calderon - Wordsmith Extraordinaire</h2>
+            <h2 class="title-text">Vince Calderon - Wordsmith Extraordinaire</h2>
 
             Vince Calderon, our Wordsmith Extraordinaire, turns each dining experience into a vivid narrative. Through
             his eloquent words, he captures the essence of the flavors, aromas, and stories that make Sta. Maria's
             culinary scene truly exceptional. Vince's linguistic prowess brings the Patikim ni Sta. Maria blog to life.
             <br><br>
-            <h2 class="titleText">John Gabriel Guilalas - Visual Culinary Artist</h2>
+            <h2 class="title-text">John Gabriel Guilalas - Visual Culinary Artist</h2>
 
             As our Visual Culinary Artist, John Gabriel transforms the flavors of Sta. Maria into captivating visuals.
             With an artistic eye and a passion for photography, he skillfully captures the essence of each dish, making
             your virtual culinary journey a feast for the eyes. John Gabriel's images tell a story of taste and
             aesthetics.
             <br><br>
-            <h2 class="titleText">Glaiza San Victores - Community Connector</h2>
+            <h2 class="title-text">Glaiza San Victores - Community Connector</h2>
 
             Glaiza, our Community Connector, bridges the gap between Patikim ni Sta. Maria and our vibrant community.
             Through her dedication, she ensures that our blog not only showcases the town's culinary treasures but also
