--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="images/SantaMariaWelcomeArch.jpg" type="image/png">
+    <link rel="icon" href="images/logooo.png" type="image/png">
 
 </head>
 
 <body>
     <header>
-        <div class="nav container">
-            <a href="index.html" class="logo">Patikim ni Sta.Maria</a>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
             <div class="nav-links">
                 <a href="index.html" class="logo">Home</a>
                 <a href="about.html" class="logo">About</a>
@@ -64,7 +64,7 @@
                 and signature dishes. From cozy family-owned bistros to bustling eateries that have stood the test of
                 time, "Patikim ni Sta. Maria" is your guide to the best culinary experiences the town has to offer.
 
-            </p>    
+            </p>
         </div>
 
         <div class="contentBx">
@@ -87,11 +87,13 @@
             <h2 class="titleText">Why choose "Patikim ni Sta.Maria?"</h2>
             <ul class="bullet-list">
                 <li><b>Local Expertise:</b> We know Sta. Maria, and we're passionate about its culinary scene.</li>
-                <li><b>Curated Selection:</b> We've handpicked the best restaurants to ensure a memorable dining journey.</li>
-                <li><b>Community Focus:</b> By supporting local businesses, you contribute to the growth and vibrancy of Sta. Maria.</li>
+                <li><b>Curated Selection:</b> We've handpicked the best restaurants to ensure a memorable dining
+                    journey.</li>
+                <li><b>Community Focus:</b> By supporting local businesses, you contribute to the growth and vibrancy of
+                    Sta. Maria.</li>
             </ul>
         </div>
-        
+
 
 
         <div class="contentBx">
@@ -231,7 +233,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        crossorigin="jo" referrerpolicy="no-referrer"></script>
     <script src="main.js"></script>
 
 </body>
