--- a/restaurants.html
+++ b/restaurants.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurants</title>
 
-    <link rel="stylesheet" href="restaurants.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <header>
-        <div class="nav container">
-            <a href="index.html" class="logo">Patikim ni Sta.Maria</a>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
             <div class="nav-links">
                 <a href="index.html" class="logo">Home</a>
                 <a href="about.html" class="logo">About</a>
