--- a/aboutStaMaria.html
+++ b/aboutStaMaria.html
@@ -12,8 +12,8 @@
 <body>
 
     <header>
-        <div class="nav container">
-            <a href="subscribeForm.html" class="logo">Patikim ni Sta.Maria</a>
+        <div class="nav container" id="headerContainer">
+            <a href="index.html"><img src="images/logowhite.png" alt="" class="logoimg" id="logoImage"></a>
             <div class="nav-links">
                 <a href="index.html" class="logo">Home</a>
                 <a href="about.html" class="logo">About</a>
@@ -32,6 +32,7 @@
             <a href="subscribeForm.html" class="subscribe">SUBSCRIBE</a>
         </div>
     </header>
+
 
 
 
