--- a/subscribeForm.html
+++ b/subscribeForm.html
@@ -13,14 +13,14 @@
 
     <header>
         <div class="nav container">
-            <a href="index.html" class="logo">Patikim ni Sta.Maria</a>
+            <a href="index.html"><img src="images/logooo.png" alt="" class="logoimg"></a>
             <div class="nav-links">
-                <a href="index.html" class="home">Home</a>
-                <a href="about.html" class="about">About</a>
+                <a href="index.html" class="logo">Home</a>
+                <a href="about.html" class="logo">About</a>
 
                 <!-- Restaurants Dropdown -->
                 <div class="dropdown">
-                    <a href="restaurants.html" class="dropbtn">Restaurant&#11206;</a>
+                    <a href="restaurants.html" class="logo">Restaurant&#11206;</a>
                     <div class="dropdown-content">
                         <a href="caypombo.html">Caypombo</a>
                         <a href="#staclara">Sta Clara</a>
